--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test",
-  "homepage": "https://npEducationalPortal-React.github.io",
+  "homepage": "https://egorsuperboy228.github.io/EducationalPortal-React.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
